# ssh-local-exec

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust-ci.yml
src/: args.rs  client.rs  lib.rs  log.rs  protocol.rs  server.rs  socket.rs  task.rs  thread.rs
tests/: basic_usage.rs  exit_code.rs
tests/docker/: .env.coverage  .env.debug  Dockerfile  docker-compose.yml
tests/docker-utils/: Cargo.toml  README.md
tests/docker-utils/src/: lib.rs
tests/docker/assets/: build  finalize  run-command
