[package]
name = "ssh-local-exec"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "Execute a command on the SSH local host from the remote host"
repository = "https://github.com/gifnksm/ssh-local-exec"
license = "MIT or Apache-2.0"
rust-version = "1.64.0"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance = true
license = { link = "#license" }
crates-io = true
docs-rs = true
rust-version = true
github-actions = { workflows = ["rust-ci.yml"] }
codecov = true

[dependencies]
async-trait = "0.1.80"
bytes = { version = "1.6.0", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4.5.4", features = ["derive", "env"] }
color-eyre = "0.6.3"
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
futures = { version = "0.3.30", default-features = false, features = ["std", "async-await"] }
nix = { version = "0.28.0", features = ["signal"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["macros", "net", "rt-multi-thread", "process", "io-util", "signal"] }
tokio-shutdown = { version = "0.1.4", features = ["tracing"] }
tokio-stream = { version = "0.1.15", features = [] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = { version = "2.0.14", features = ["color"] }
predicates = "3.1.0"
docker-utils = { path = "tests/docker-utils" }

[workspace]
members = ["tests/docker-utils"]

[badges]
maintenance = { status = "experimental"}
